Fixed authors names null problem.